tests/fixtures/security/certs/invalid/duplicate_fingerprint.store
store_id=duplicate-fingerprint-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
record|roots|1111111111111111111111111111111111111111111111111111111111111111|CN=Root CA|CN=Root CA|root|2026-01-01T00:00:00Z|2036-01-01T00:00:00Z|1000
record|intermediates|1111111111111111111111111111111111111111111111111111111111111111|CN=Intermediate CA|CN=Root CA|intermediate|2026-01-01T00:00:00Z|2030-01-01T00:00:00Z|1001
